--- a/avrwa/src/app/components/cctv-config/cctv-config.component.html
+++ b/avrwa/src/app/components/cctv-config/cctv-config.component.html
@@ -1,4 +1,4 @@
-<section class="container" *ngIf="!isConnected">
+<section class="bg-success-subtle py-5" *ngIf="!isConnected">
   <div class="container mt-5">
     <h2>CCTV Configuration</h2>
     <div class="mt-4">
@@ -39,7 +39,7 @@
   </div>
 </section>
 <div class="container" *ngIf="isConnected">
-  <div class="mt-3 row">
+  <div class="mt-3 row gap-3">
     <div class="card col pt-1" style="width: 18rem;">
       <img [src]="imgSrc" class="card-img-top" alt="...">
       <div class="card-body">
