--- a/avrwa/src/app/components/media-upload/media-upload.component.html
+++ b/avrwa/src/app/components/media-upload/media-upload.component.html
@@ -1,27 +1,29 @@
-<div class="container mt-5" *ngIf="!isUploaded">
-  <div class="mb-3">
-    <label for="mediaFile" class="form-label">Upload a media file</label>
-    <input class="form-control" type="file" id="mediaFile">
-    <div class="text-muted end-0"><span class="text-danger">*</span>mp4,mkv,jpeg,jpg</div>
-  </div>
-  <button class="btn btn-success" (click)="upload()">Upload</button>
-</div>
-<div class="container mt-5" *ngIf="isUploaded">
-  <div class="mb-3 row">
-    <div class="mt-3 col">
-      <div class="card p-1">
-        <img [src]="imgSrc" class="card-img-top" alt="...">
-      </div>
+<div class="bg-success-subtle">
+  <div class="container py-5" *ngIf="!isUploaded">
+    <div class="mb-3">
+      <label for="mediaFile" class="form-label">Upload a media file</label>
+      <input class="form-control" type="file" id="mediaFile">
+      <div class="text-muted end-0"><span class="text-danger">*</span>mp4,mkv,jpeg,jpg</div>
     </div>
-    <div class="mt-3 col">
-      <div class="card pt-1">
-        <div class="card-body">
-          <p class="card-text">Car - 08</p>
-          <p class="card-text">Van - 02</p>
-          <p class="card-text">Bike - 14</p>
+    <button class="btn btn-success mt-5" (click)="upload()">Upload</button>
+  </div>
+  <div class="container py-5" *ngIf="isUploaded">
+    <div class="mb-3 row">
+      <div class="mt-3 col">
+        <div class="card p-1">
+          <img [src]="imgSrc" class="card-img-top" alt="...">
+        </div>
+      </div>
+      <div class="mt-3 col">
+        <div class="card pt-1">
+          <div class="card-body">
+            <p class="card-text">Car - 08</p>
+            <p class="card-text">Van - 02</p>
+            <p class="card-text">Bike - 14</p>
+          </div>
         </div>
       </div>
     </div>
+    <button class="btn btn-danger" (click)="upload()">Cancel</button>
   </div>
-  <button class="btn btn-danger" (click)="upload()">Cancel</button>
 </div>
