some minor changes for home page

--- a/avrwa/src/app/components/home/home.component.css
+++ b/avrwa/src/app/components/home/home.component.css
@@ -1,7 +1,11 @@
-.heroSection{
-  background-image: url("https://bs-uploads.toptal.io/blackfish-uploads/components/blog_post_page/content/cover_image_file/cover_image/1312209/retina_1708x683_cover-0323-MachineLearning_Dan_Newsletter-b21703f41d807514083e297955e1b46d.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: #cccccc;
+.divider {
+  width: 100%;
+  height: 2px;
+  background-color: #ccc;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.fw-bold {
+  font-weight: bold;
 }
